--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "dektrium/yii2-user": "^0.9.14",
         "codemix/yii2-localeurls": "^1.7",
         "yiisoft/yii2-jui": "^2.0",
-        "kartik-v/yii2-widget-datetimepicker": "dev-master"
+        "kartik-v/yii2-widget-datetimepicker": "dev-master",
+        "kartik-v/yii2-widget-select2": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
