--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "kartik-v/yii2-widget-select2": "dev-master",
-        "dektrium/yii2-rbac": "1.0.0-alpha@dev"
+        "dektrium/yii2-rbac": "1.0.0-alpha@dev",
+        "endroid/qr-code": "^3.7"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
